# VulkanSyncGraph

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: graphviz.cmake
src/: IAnalyzer.h  LayerManager.cpp  LayerManager.h  SyncAnalyzer.cpp  SyncAnalyzer.h  VK_LAYER_AZ_sync_analyzer.json  dll_main.cpp  export.def  layer.h  main.cpp
stl/: Common.h  Config.h  Defines.h
stl/Algorithms/: ArrayUtils.h  Cast.h  EnumUtils.h  Hash.h  StringUtils.h
stl/CompileTime/: DefaultType.h  FunctionInfo.h  Hash.h  Math.h  TypeList.h  TypeTraits.h  UMax.h
stl/Containers/: ArrayView.h  FixedArray.h  NtStringView.h  Ptr.h  Singleton.h  StaticString.h  StructView.h  Union.h
stl/Log/: Log.cpp  Log.h
stl/Math/: BitMath.h  Bytes.h  Color.h  Math.h
stl/Memory/: LinearAllocator.h  MemUtils.h  UntypedAllocator.h
stl/Stream/: FileStream.cpp  FileStream.h  MemStream.h  Stream.cpp  Stream.h
